# tp2_alglobo

./: Cargo.toml  README.md
resources/: payments.csv
src/: main.rs  payment.rs
src/common/: helper.rs  lib.rs  transaction.rs  transaction_coordinator.rs
src/main/: leader_election.rs  main.rs  payment.rs  transaction_coordinator.rs
src/main_activity/: main.rs  record.rs  transaction_coordinator.rs  transactions.csv
src/manual_processing/: main.rs
src/microservice/: main.rs
