[package]
name = "tp2_alglobo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
csv = "1"
structopt = "0.3.13"

[[bin]]
name = "microservice"
path = "src/microservice/main.rs"

[[bin]]
name = "main_activity"
path = "src/main_activity/main.rs"
